syntax = "proto3";

option go_package = "/proto";

package proto;
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/proto.proto

service Template
{
    // send message
    rpc SendChatMessage (stream OutgoingMessage) returns (stream IncomingMessage);
}

message OutgoingMessage {
    string userName = 1;
    string message = 2;
    
    int64 process = 3;
    int64 actions = 4;
}


message IncomingMessage {
    string userName = 1;
    string message = 2;

    int64 process = 3;
    int64 actions = 4;
}



